<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="16dp">

    <ImageView
        android:id="@+id/image_movie_poster"
        android:layout_width="100dp"
        android:layout_height="144dp"
        android:scaleType="centerCrop"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:src="@tools:sample/avatars" />

    <TextView
        android:id="@+id/text_movie_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:fontFamily="@font/plex_sans_bold"
        android:text="@string/movie_name"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/image_movie_poster"
        app:layout_constraintTop_toTopOf="@id/image_movie_poster" />

    <TextView
        android:id="@+id/text_movie_year"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="4dp"
        android:fontFamily="@font/plex_sans_regular"
        android:text="@string/year"
        android:textColor="@color/white"
        android:textSize="14sp"
        app:layout_constraintStart_toEndOf="@id/image_movie_poster"
        app:layout_constraintTop_toBottomOf="@id/text_movie_title" />

    <TextView
        android:id="@+id/text_divider"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:fontFamily="@font/plex_sans_regular"
        android:text="@string/divider"
        android:textColor="@color/white"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@id/text_movie_year"
        app:layout_constraintStart_toEndOf="@id/text_movie_year"
        app:layout_constraintTop_toTopOf="@id/text_movie_year" />

    <TextView
        android:id="@+id/text_movie_country"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:fontFamily="@font/plex_sans_regular"
        android:text="@string/country"
        android:textColor="@color/white"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@id/text_movie_year"
        app:layout_constraintStart_toEndOf="@id/text_divider"
        app:layout_constraintTop_toTopOf="@id/text_movie_year" />

    <com.google.android.flexbox.FlexboxLayout
        android:id="@+id/text_genre"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="4dp"
        app:alignContent="flex_start"
        app:alignItems="flex_start"
        app:flexWrap="wrap"
        app:justifyContent="flex_start"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/image_movie_poster"
        app:layout_constraintTop_toBottomOf="@id/text_movie_country" />

    <TextView
        android:id="@+id/text_rating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="48dp"
        android:background="@drawable/border_rating"
        android:fontFamily="@font/plex_sans_medium"
        android:paddingHorizontal="16dp"
        android:paddingVertical="4dp"
        android:text="@string/rating_placeholder"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@id/image_movie_poster"
        app:layout_constraintTop_toBottomOf="@id/text_genre" />

</androidx.constraintlayout.widget.ConstraintLayout>