<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="8dp"
    android:background="@drawable/border_edittext"
    android:padding="8dp">

    <androidx.cardview.widget.CardView
        android:id="@+id/image_profile_container"
        android:layout_width="40dp"
        android:layout_height="40dp"
        app:cardCornerRadius="1000dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/image_profile"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:src="@drawable/ic_user" />
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/text_rating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/border_rating"
        android:fontFamily="@font/plex_sans_medium"
        android:paddingHorizontal="16dp"
        android:paddingVertical="4dp"
        android:text="@string/rating_placeholder"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@id/image_profile_container"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/image_profile_container" />

    <LinearLayout
        android:id="@+id/linear_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="@id/image_profile_container"
        app:layout_constraintEnd_toStartOf="@id/text_rating"
        app:layout_constraintStart_toEndOf="@id/image_profile_container"
        app:layout_constraintTop_toTopOf="@id/image_profile_container">

        <TextView
            android:id="@+id/edit_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/plex_sans_medium"
            android:text="@string/username"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/text_my_review"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/plex_sans_regular"
            android:text="@string/my_review"
            android:textColor="@color/gray"
            android:textSize="12sp" />

    </LinearLayout>

    <TextView
        android:id="@+id/text_review"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/plex_sans_regular"
        android:text="@string/description"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/image_profile_container" />

    <TextView
        android:id="@+id/text_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/plex_sans_regular"
        android:text="@string/date"
        android:textColor="@color/gray"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_review" />

    <ImageView
        android:id="@+id/button_delete_review"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_delete_review"
        app:layout_constraintBottom_toBottomOf="@id/text_date"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/text_date" />

    <ImageView
        android:id="@+id/button_edit_review"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:src="@drawable/ic_pencil_review"
        app:layout_constraintBottom_toBottomOf="@id/text_date"
        app:layout_constraintEnd_toStartOf="@id/button_delete_review"
        app:layout_constraintTop_toTopOf="@id/text_date" />

</androidx.constraintlayout.widget.ConstraintLayout>