<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black_background"
    tools:context=".view.SignInActivity">

    <ImageView
        android:id="@+id/icon_logo"
        android:layout_width="208dp"
        android:layout_height="110dp"
        android:layout_marginTop="32dp"
        android:src="@drawable/ic_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/icon_app_name"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="21dp"
        android:src="@drawable/ic_app_name"
        app:layout_constraintEnd_toEndOf="@id/icon_logo"
        app:layout_constraintStart_toStartOf="@id/icon_logo"
        app:layout_constraintTop_toBottomOf="@id/icon_logo" />


    <EditText
        android:id="@+id/edit_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="50dp"
        android:background="@drawable/border_edittext"
        android:fontFamily="@font/plex_sans_regular"
        android:hint="@string/username"
        android:inputType="textPersonName"
        android:paddingHorizontal="16dp"
        android:paddingVertical="12dp"
        android:textColor="@color/orange"
        android:textColorHint="@color/gray"
        android:textSize="14sp"
        app:layout_constraintTop_toBottomOf="@id/icon_app_name" />

    <EditText
        android:id="@+id/edit_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/border_edittext"
        android:fontFamily="@font/plex_sans_regular"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:paddingHorizontal="16dp"
        android:paddingVertical="12dp"
        android:textColor="@color/orange"
        android:textColorHint="@color/gray"
        android:textSize="14sp"
        app:layout_constraintTop_toBottomOf="@id/edit_username" />

    <TextView
        android:id="@+id/button_signin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginBottom="6dp"
        android:background="@drawable/border_edittext"
        android:fontFamily="@font/plex_sans_medium"
        android:paddingVertical="12dp"
        android:text="@string/sign_in"
        android:textAlignment="center"
        android:textColor="@color/orange"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@id/button_signup" />

    <TextView
        android:id="@+id/button_signup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="6dp"
        android:padding="12dp"
        android:text="@string/sign_up"
        android:textColor="@color/orange"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>